# vierkant_projects

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_build.yml  cmake_build_nightly_windows.yml  cmake_build_windows.yml  cmake_upload_nightly.yml
projects/: CMakeLists.txt
projects/cache_4km/: cache_4km.cpp
projects/pbr_thumbnailer/: pbr_thumbnailer.cpp  pbr_thumbnailer.h
projects/pbr_viewer/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  animation_cereal.hpp  cereal_singleton_helper.cpp  collision_cereal.hpp  glm_cereal.hpp  optional_nvp_cereal.hpp  pbr_viewer.cpp  pbr_viewer.hpp  pbr_viewer_load_store.cpp  pbr_viewer_serialization.cpp  pbr_viewer_serialization.hpp  pbr_viewer_ui.cpp  scene_cereal.hpp  scene_data.hpp  serialization.hpp  ziparchive.cpp  ziparchive.h  zipstream.cpp  zipstream.h
projects/simple_raytracing/: RayBuilder.cpp  RayBuilder.hpp  Raytracer.cpp  Raytracer.hpp  RaytracingPipeline.cpp  RaytracingPipeline.h  simple_raytrace.cpp  simple_raytrace.hpp
projects/simple_raytracing/shaders/simple_ray/: closesthit.rchit  miss.rmiss  miss_environment.rmiss  ray_common.glsl  raygen.rgen
projects/simple_test/: simple_test.cpp  simple_test.hpp
samples/: CMakeLists.txt
samples/simple_test/: simple_test.cpp
vierkant_cereal/: CMakeLists.txt
vierkant_cereal/include/vierkant_cereal/: glm_cereal.hpp  scene_cereal.hpp  scene_data.hpp  serialization.hpp  vierkant_cereal.hpp  ziparchive.h
vierkant_cereal/src/: vierkant_cereal.cpp  ziparchive.cpp
